# caddy

./: ACCESSIBILITY_INTEGRATION.md  AGENT1_COMPLETION_REPORT.md  AGENT_10_ANALYTICS_COMPLETION.md  AGENT_10_COMPLETION_REPORT.md  AGENT_3_AUTH_COMPLETION_REPORT.md  AGENT_5_REPORT.md  AGENT_6_COMPLETION_REPORT.md  AGENT_7_UI_COMPONENTS_REPORT.md  AGENT_8_COMPLETION_REPORT.md  AGENT_9_IMPORT_EXPORT_PIPELINE.md  ANALYTICS_FILES_SUMMARY.txt  ANALYTICS_SYSTEM_README.md  BUILD_COMPLETE_v0.4.0.md  BUILD_ERRORS_FIXED_v0.4.0.md  BUILD_ERRORS_LOG.md  BUILD_REPORT.md  BUILD_STATUS.md  BUILD_WARNINGS_FIXED_v0.4.0.md  BUILD_WARNINGS_LOG.md  CACHE_SYSTEM_OVERVIEW.md  CHANGELOG.md  CHANGELOG_v0.4.0.md  CLUSTER_MODULE_SUMMARY.md  COLLABORATION_ENGINE_COMPLETE.md  COMMAND_SYSTEM_COMPLETE.md  COMMAND_SYSTEM_SUMMARY.md  COORDINATION_REPORT.md  Cargo.toml  DIMENSIONS_AND_CONSTRAINTS_SUMMARY.md  DIMENSION_CONSTRAINT_API.md  DIMENSION_CONSTRAINT_USAGE.md  IO_SYSTEM_README.md  IO_SYSTEM_STATS.md  LAYER_SYSTEM_SUMMARY.md  PROJECT_STATUS.md  README_v0.3.0.md  README_v0.4.0.md  RENDERING_MODULE_COMPLETE.md  SCRATCHPAD.md  SCRATCHPAD_v0.2.5.md  (+7 more)
bindings/typescript/: README.md  package-lock.json  package.json  tsconfig.json
docs/: IO_QUICK_REFERENCE.md
examples/: enterprise_analytics_demo.rs
extensions/browser/: .eslintrc.json  .gitignore  .prettierrc.json  PROJECT_SUMMARY.md  README.md  manifest.json  package.json  tsconfig.json  webpack.config.js
scratchpad/: AGENT14_COORDINATION_REPORT.md  AGENT2_SUMMARY.md  AGENT_3_COMPLETION_REPORT.md  BUILD_OUTPUT.txt  COORDINATION.md
src/: lib.rs  main.rs  saas_app.rs
src/accessibility/: IMPLEMENTATION_SUMMARY.md  README.md  analyzer.rs  mod.rs  remediation.rs  rules.rs  scanner.rs
src/ai/: engine.rs  mod.rs  nlp.rs  predictions.rs  suggestions.rs  vision.rs
src/analytics/: aggregator.rs  collector.rs  export.rs  mod.rs  performance.rs  reporting.rs  storage.rs  usage.rs
src/api/: gateway.rs  handlers.rs  middleware.rs  mod.rs  responses.rs  routes.rs  webhooks.rs
src/auth/: audit.rs  mfa.rs  mod.rs  rbac.rs  sessions.rs  sso.rs
src/collaboration/: CollaborationPanel.tsx  CollaborationProvider.tsx  ConflictDialog.tsx  CursorOverlay.tsx  VersionHistory.tsx  index.ts  useCollaboration.ts
src/commands/: command.rs  draw.rs  edit.rs  history.rs  mod.rs  modify.rs  processor.rs  registry.rs  view.rs
src/components/: index.ts
src/compression/: adaptive.rs  delta_encoding.rs  dictionary.rs  lz4_custom.rs  mesh_compression.rs  mod.rs  parallel.rs  streaming.rs
src/constraints/: dimensional.rs  geometric.rs  mod.rs  solver.rs
src/core/: color.rs  math.rs  mod.rs  precision.rs  primitives.rs
src/database/: backup.rs  cache.rs  connection_pool.rs  migrations.rs  mod.rs  query_optimizer.rs  replication.rs  sharding.rs  spatial_index.rs
src/dimensions/: angular.rs  leader.rs  linear.rs  mod.rs  radial.rs  style.rs  text.rs
src/engine3d/: analysis.rs  boolean.rs  constraints.rs  healing.rs  mesh.rs  mod.rs  nurbs.rs  simplification.rs  tessellation.rs  topology.rs
src/enterprise/: mod.rs
src/geometry/: arc.rs  boolean.rs  curve.rs  extrude.rs  line.rs  mesh.rs  mod.rs  point.rs  polygon.rs  solid.rs  surface.rs
src/integrations/: azure_devops.rs  bitbucket.rs  cli.rs  github.rs  gitlab.rs  jenkins.rs  mod.rs
src/io/: batch.rs  document.rs  dwg.rs  dxf.rs  export.rs  gltf.rs  iges.rs  import.rs  mod.rs  native.rs  obj.rs  step.rs  stl.rs  units.rs  validation.rs
src/layers/: filter.rs  layer.rs  manager.rs  mod.rs  properties.rs  state.rs  styles.rs
src/plugins/: api.rs  lifecycle.rs  loader.rs  marketplace.rs  mod.rs  permissions.rs  registry.rs  sandbox.rs
src/rendering/: EXPORTS.md  README.md  buffers.rs  camera.rs  mod.rs  (+4 more)
tests/: geometry_3d_integration_test.rs  layer_integration_test.rs
(+473 files in other folders)
