[package]
name = "caddy"
version = "0.1.0"
edition = "2021"
authors = ["Caddy Team"]
description = "CADDY - Enterprise Computer-Aided Design System"
license = "MIT"
repository = "https://github.com/caddy-cad/caddy"
keywords = ["cad", "design", "engineering", "drafting", "3d"]
categories = ["graphics", "rendering", "visualization"]

[dependencies]
# Math and linear algebra
nalgebra = { version = "0.32", features = ["serde-serialize"] }
approx = "0.5"

# Graphics and rendering
wgpu = "0.19"
winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.24"

# GUI
egui = "0.27"
eframe = { version = "0.27", default-features = true }
egui-wgpu = "0.27"
egui-winit = "0.27"
rfd = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# File formats
dxf = "0.5"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
parking_lot = "0.12"
rayon = "1.8"
ordered-float = "4.2"
chrono = { version = "0.4", features = ["serde"] }

# Async runtime (for file operations)
tokio = { version = "1.35", features = ["full"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

# Benchmarks disabled until benchmark files are created
# [[bench]]
# name = "geometry_benchmarks"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[features]
default = ["gpu-rendering"]
gpu-rendering = []
software-rendering = []
