[package]
name = "caddy"
version = "0.1.5"
edition = "2021"
authors = ["Caddy Team"]
description = "CADDY - Enterprise Computer-Aided Design System"
license = "MIT"
repository = "https://github.com/caddy-cad/caddy"
keywords = ["cad", "design", "engineering", "drafting", "3d"]
categories = ["graphics", "rendering", "visualization"]

[dependencies]
# Math and linear algebra
nalgebra = { version = "0.32", features = ["serde-serialize"] }
approx = "0.5"

# Graphics and rendering
wgpu = "0.19"
winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.24"

# GUI
egui = "0.27"
eframe = { version = "0.27", default-features = true }
egui-wgpu = "0.27"
egui-winit = "0.27"
rfd = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# File formats
dxf = "0.5"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
parking_lot = "0.12"
rayon = "1.8"
ordered-float = "4.2"
chrono = { version = "0.4", features = ["serde"] }

# Async runtime (for file operations)
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP client for marketplace
reqwest = { version = "0.11", features = ["json"] }

# Version handling
semver = "1.0"

# Database utilities
md5 = "0.7"

# Cryptography for license management
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base32 = "0.4"
base64 = "0.21"
hex = "0.4"
ring = "0.17"

# Enterprise features dependencies
argon2 = "0.5"
jsonwebtoken = "9.2"
aes-gcm = "0.10"
rsa = "0.9"
pbkdf2 = "0.12"
cron = "0.12"
dashmap = "5.5"
crossbeam = "0.8"
blake3 = "1.5"
regex = "1.10"
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

# Benchmarks disabled until benchmark files are created
# [[bench]]
# name = "geometry_benchmarks"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[features]
default = ["gpu-rendering"]
gpu-rendering = []
software-rendering = []
